# DSGP15_Project

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.py
backend/: app.py  main.py
backend/app/: app.py
backend/app/core/: config.py
backend/app/database/: crud_class.py  crud_job.py  crud_student.py  database.py
backend/app/ml/dia_model/: config.py  dia_rag_pipeline.py  gemini_client.py  main.py  pdf_loader.py  rag_retriever.py  text_splitter.py  utils.py  vector_store.py
backend/app/ml/dia_model/chroma_db/: chroma.sqlite3
backend/app/ml/image_model/: run_processor.py  test_processor.py  validate_paper.py
backend/app/ml/mood_model/: emotion_pipeline.py  run_pipeline.py
backend/app/ml/recommendation_model/: recommendations_engine.py
backend/app/models/: class_model.py  job.py  student.py
backend/app/routers/: class_router.py  image.py  job.py  student.py  student_router.py
backend/app/schemas/: class_schema.py  image.py  job.py  student.py
backend/app/services/: emotion_service.py  image_service.py  job_processor.py
backend/app/utils/: rag_config_builder.py  recommendation_input_builder.py
bert_emotion_classifier/: main.py  pyproject.toml
frontend/: app.py
frontend/components/: auth.py  sidebar.py
frontend/data/: mock_data.py
frontend/pages/: add_class.py  analysis.py  child_profile.py  class_detail.py  classes.py  dashboard.py
frontend/utils/: icons.py  styles.py
ml-models/: data_ingestion.py
ml-models/dev_classification/: feature_extraction.ipynb
ml-models/dev_classification/notebooks/: dev_classification_eda.ipynb  dev_classification_feature_extraction.ipynb  feature_extraction.ipynb
ml-models/dia/: README.md  objectives.txt
ml-models/dia/notebooks/: QuickDraw.ipynb  quickdraw_setup.ipynb
ml-models/dia/rag/: ask.py  config.py  dia_rag_pipeline.py  gemini_client.py  main.py  prompts.py  rag_retriever.py  text_splitter.py  vector_store.py
ml-models/education/notebooks/: education_eda.ipynb  education_text_model.ipynb
ml-models/image/: README.md
ml-models/image/model_export/: optimized1.py  optimized2.py  optimized3.py  optimized4.py  preprocessor_service.py  test_processor.py
ml-models/image/notebooks/: image_preprocessing.ipynb  sam_final.py  sam_v1.ipynb  sam_v2.ipynb  sam_v3.ipynb  sam_v4.ipynb  sam_v5.ipynb  sam_v6.ipynb  sam_v7.ipynb  sam_v8.ipynb  sam_v9.ipynb  u2_v1.ipynb  yolov8_v1.ipynb  yolov8_v2.ipynb  yolov8_v3.ipynb
ml-models/mood/README/: README.md
ml-models/mood/notebooks/: BERT.ipynb  ResNet18.ipynb  ResNet50.ipynb
ml-models/mood/notebooks/DistilBERT/: BERT.ipynb
ml-models/mood/notebooks/Fusion/: multimodal_fusion.ipynb
ml-models/mood/notebooks/Pipeline/: emotion_pipeline.py  run_pipeline.py
ml-models/mood/notebooks/ResNet18/: ResNet18.ipynb
ml-models/mood/notebooks/ResNet50/: ResNet50.ipynb
ml-models/mood/notebooks/results/: ResNet50.ipynb
ml-models/recommendation/: README.md
ml-models/recommendation/model_export/: main.py  recommendations_engine.py
ml-models/recommendation/notebooks/: Recommendation_ (1).ipynb
