[project]
name = "dsgp-15-project"
version = "0.1.0"
description = "Deep learning project to analyze children's drawings for emotion recognition and creativity assessment."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "albumentations>=2.0.8",
    "contourpy>=1.3.3",
    "fastapi>=0.122.0",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.0",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.7",
    "numpy>=1.26,<2.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "torch>=2.0.0,<2.2.0",
    "torchvision>=0.15.0,<0.17.0",
    "torchaudio>=2.0.0,<2.2.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "ultralytics>=8.1,<9.0",
    "uvicorn>=0.38.0",
    "segment-anything>=1.0",
]
